MTP-2271 fix too much padding in main menu dropdown (#1093)

--- a/mt-kit/core/css/src/components/_dropdown.scss
+++ b/mt-kit/core/css/src/components/_dropdown.scss
@@ -95,8 +95,7 @@
   // Currently used in the header
   &.mt-button__small-text {
     font-size: $font-size-body;
-    .mt-button,
-    a {
+    .mt-button {
       padding: var(--spacer-xx-small);
       font-size: $font-size-body;
     }
